# shape_classifier

./: CMakeLists.txt  README.md
include/: shape_detector.h
src/: ShapeClassifier.cpp  shape_detector.cpp
